src/css/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
    font-family: "Lato";
    src: url("/fonts/Lato-Regular.woff") format("woff");
    font-style: normal;
    font-weight: normal;
    font-display: block;
}

@font-face {
    font-family: "Lato";
    src: url("/fonts/Lato-Italic.woff") format("woff");
    font-style: italic;
    font-weight: normal;
    font-display: block;
}

:root {
    --surgeOrange: #ff9900;
    --surgeOrangeBright: #ffa826;
    --surgeBlue: #2d86fe;
    --surgeBlueBright: #4c98fe;
}

@layer base {
    h1 {
        @apply text-3xl;
    }
    h2 {
        @apply text-2xl;
    }
    h3 {
        @apply text-xl;
    }
    h4 {
        @apply text-lg;
    }
    a {
        @apply text-surgeBlue hover:text-surgeBlueBright underline decoration-dotted;
    }
    ul {
        @apply list-inside list-disc;
    }
    ol {
        @apply list-inside list-decimal;
    }
}

